# otus_template_m

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  lib_8cpp.html  lib_8cpp__incl.map  lib_8cpp__incl.md5  lib_8h.html  lib_8h__dep__incl.map  lib_8h__dep__incl.md5  lib_8h__incl.map  lib_8h__incl.md5  lib_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8md.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  print__ip_8h_source.html  structall__types__same.html  (+9 more)
.github/workflows/: release.yml
docs/: main.md
search/: all_0.js  all_2.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_2.js  pages_0.js  searchdata.js
src/: lib.cpp  lib.h  main.cpp  print_ip.h
tests/: print_ip_test.cpp  test_1.sh
